--- a/src/I2R.LightNews.csproj
+++ b/src/I2R.LightNews.csproj
@@ -9,6 +9,8 @@
         <PackageReference Include="AngleSharp" Version="0.17.1" />
         <PackageReference Include="IOL.Helpers" Version="3.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
+        <PackageReference Include="Dapper" Version="2.0.123" />
     </ItemGroup>
 
     <ItemGroup>
